build beast package skeleton